--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-v2",
   "version": "0.1.0",
-  "homepage": "https://danvs60.github.io/app",
+  "homepage": "https://danvs60.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
