--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio-v2",
+  "name": "portfolio-website",
   "version": "0.1.0",
-  "homepage": "https://danvs60.github.io/portfolio-v2/",
+  "homepage": "https://danvs60.github.io/portfolio-website/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
